# infra-newnal-parachain

./: .dockerignore  .gitignore  Cargo.toml  README.md
docker/: Dockerfile  injected_infra-evm.Dockerfile
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  service.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
runtime/src/weights/xcm/: mod.rs
zombienet/: local-dev.toml
