[package]
name = "infra-newnal-parachain-bin"
version = "1.1.0"
authors = ["blockchain labs"]
build = "build.rs"
edition = "2021"
description = "Runs a infra-relay parachain node which could be a collator."

[[bin]]
name = "infra-newnal-parachain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.28"
hex-literal = "0.4.1"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# Local
jsonrpsee = { version = "0.16.2", features = ["server"] }
parachains-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }

# parachains's runtimes
infra-newnal-parachain-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-offchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
substrate-state-trie-migration-rpc = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }

# Infra Relay
infrablockchain-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master", features = [
	"rococo-native",
	"infra-relay-native",
] }
primitives = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
infrablockchain-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
xcm = { package = "staging-xcm", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-collator = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-consensus-proposer = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-primitives-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", branch = "master" }


[dev-dependencies]
assert_cmd = "2.0"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"infrablockchain-cli/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"infrablockchain-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"infrablockchain-cli/try-runtime",
	"infrablockchain-service/try-runtime",
	"sp-runtime/try-runtime",
]
fast-runtime = [
	"infra-newnal-parachain-runtime/fast-runtime",
]