[package]
name = "infra-newnal-parachain-runtime"
version = "0.1.1"
authors = ["blockchain labs"]
edition = "2021"
homepage = "https://infrablockchain.net/en"
repository = "https://github.com/InfraBlockchain/infra-newnal-parachain"
license = "GPL-3.0-only"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Local
pallet-urauth = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }

# System
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false, optional = true }
frame-executive = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
frame-support = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
frame-system = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
frame-system-benchmarking = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
frame-try-runtime = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false, optional = true }

# Frames
pallet-assets = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-authorship = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-balances = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-preimage = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-session = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-system-token = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-scheduler = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-sudo = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-timestamp = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-transaction-payment = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-system-token-tx-payment = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }

# Primitives
sp-api = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-genesis-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-inherents = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-offchain = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-runtime = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-session = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-std = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-storage = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-version = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
sp-weights = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }

# Infra Relay
infrablockchain-core-primitives = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
infra-relay-runtime-constants = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
parachain-primitives = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
runtime-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
runtime-parachains = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }

# Xcm
pallet-xcm = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-asset-link = { package = "infra-asset-link", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
xcm-primitives = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false, features = [
	"parameterized-consensus-hook",
] }
cumulus-pallet-session-benchmarking = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
pallet-collator-selection = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
parachain-info = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
parachains-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }
assets-common = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate", default-features = false }


[dev-dependencies]
hex-literal = "0.3.4"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/InfraBlockchain/infrablockchain-substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-system-benchmarking/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-assets/std",
	"pallet-asset-link/std",
	"xcm-primitives/std",
	"frame-benchmarking/std",
	"frame-try-runtime/std",
	"pallet-system-token-tx-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-system-token/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"pallet-urauth/std",
	"parachain-info/std",
	"infrablockchain-core-primitives/std",
	"infra-relay-runtime-constants/std",
	"parachain-primitives/std",
	"runtime-common/std",
	"runtime-parachains/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"assets-common/std",
	"parachains-common/std",
]

runtime-benchmarks = [
	"pallet-asset-link/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
